corrigindo espacamento entre as colunas

--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
                 <h2>APOTEOSE RACIONAL</h2>
                 <div id="apoRacional" class="instruments">
                     <div>
-                        <a href="partitura_clarinete1.pdf" download>PDF 1º Clarinete</a>
-                        <a href="partitura_clarinete1.sib" download>Sibelius 1º Clarinete</a>
+                        <a href="partitura_clarinete1.pdf" download>1ºClarinete PDF</a>
+                        <a href="partitura_clarinete1.sib" download>1º Clarinete SIB</a>
                     </div>
                     <div>
-                        <a href="partitura_clarinete2.pdf" download>PDF 2º Clarinete</a>
-                        <a href="partitura_clarinete2.sib" download>Sibelius 2º Clarinete</a>
+                        <a href="partitura_clarinete2.pdf" download>2ºClarinete PDF</a>
+                        <a href="partitura_clarinete2.sib" download>2º Clarinete SIB</a>
                     </div>
                     <div>
-                        <a href="partitura_clarinete3.pdf" download>PDF 3º Clarinete</a>
-                        <a href="partitura_clarinete3.sib" download>Sibelius 3º Clarinete</a>
+                        <a href="partitura_clarinete3.pdf" download>3º Clarinete PDF</a>
+                        <a href="partitura_clarinete3.sib" download>3º Clarinete SIB</a>
                     </div>
                     <div>
-                        <a href="partitura_trompa.pdf" download>PDF Trompa</a>
-                        <a href="partitura_trompa.sib" download>Sibelius Trompa</a>
+                        <a href="partitura_trompa.pdf" download>Trompa PDF</a>
+                        <a href="partitura_trompa.sib" download>Trompa SIB</a>
                     </div>
                     <!-- Adicione os links para outros instrumentos -->
                 </div>
@@ -37,20 +37,20 @@
                 <h2>DESENCANTO UNIVERSAL</h2>
                 <div id="desUniversal" class="instruments">
                     <div>
-                        <a href="partitura_clarinete1.pdf" download>PDF 1º Clarinete</a>
-                        <a href="partitura_clarinete1.sib" download>Sibelius 1º Clarinete</a>
+                        <a href="partitura_clarinete1.pdf" download>1ºClarinete PDF</a>
+                        <a href="partitura_clarinete1.sib" download>1º Clarinete SIB</a>
                     </div>
                     <div>
-                        <a href="partitura_clarinete2.pdf" download>PDF 2º Clarinete</a>
-                        <a href="partitura_clarinete2.sib" download>Sibelius 2º Clarinete</a>
+                        <a href="partitura_clarinete2.pdf" download>2ºClarinete PDF</a>
+                        <a href="partitura_clarinete2.sib" download>2º Clarinete SIB</a>
                     </div>
                     <div>
-                        <a href="partitura_clarinete3.pdf" download>PDF 3º Clarinete</a>
-                        <a href="partitura_clarinete3.sib" download>Sibelius 3º Clarinete</a>
+                        <a href="partitura_clarinete3.pdf" download>3º Clarinete PDF</a>
+                        <a href="partitura_clarinete3.sib" download>3º Clarinete SIB</a>
                     </div>
                     <div>
-                        <a href="partitura_trompa.pdf" download>PDF Trompa</a>
-                        <a href="partitura_trompa.sib" download>Sibelius Trompa</a>
+                        <a href="partitura_trompa.pdf" download>Trompa PDF</a>
+                        <a href="partitura_trompa.sib" download>Trompa SIB</a>
                     </div>
                     <!-- Adicione os links para outros instrumentos -->
                 </div>
@@ -59,20 +59,20 @@
                 <h2>LUZ DO SABER</h2>
                 <div id="luzSaber" class="instruments">
                     <div>
-                        <a href="partitura_clarinete1.pdf" download>PDF 1º Clarinete</a>
-                        <a href="partitura_clarinete1.sib" download>Sibelius 1º Clarinete</a>
+                        <a href="partitura_clarinete1.pdf" download>1ºClarinete PDF</a>
+                        <a href="partitura_clarinete1.sib" download>1º Clarinete SIB</a>
                     </div>
                     <div>
-                        <a href="partitura_clarinete2.pdf" download>PDF 2º Clarinete</a>
-                        <a href="partitura_clarinete2.sib" download>Sibelius 2º Clarinete</a>
+                        <a href="partitura_clarinete2.pdf" download>2ºClarinete PDF</a>
+                        <a href="partitura_clarinete2.sib" download>2º Clarinete SIB</a>
                     </div>
                     <div>
-                        <a href="partitura_clarinete3.pdf" download>PDF 3º Clarinete</a>
-                        <a href="partitura_clarinete3.sib" download>Sibelius 3º Clarinete</a>
+                        <a href="partitura_clarinete3.pdf" download>3º Clarinete PDF</a>
+                        <a href="partitura_clarinete3.sib" download>3º Clarinete SIB</a>
                     </div>
                     <div>
-                        <a href="partitura_trompa.pdf" download>PDF Trompa</a>
-                        <a href="partitura_trompa.sib" download>Sibelius Trompa</a>
+                        <a href="partitura_trompa.pdf" download>Trompa PDF</a>
+                        <a href="partitura_trompa.sib" download>Trompa SIB</a>
                     </div>
                     <!-- Adicione os links para outros instrumentos -->
                 </div>
