corrigindo a opção de minimizar todas as músicas

--- a/index.html
+++ b/index.html
@@ -7,75 +7,82 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>RACIONAL JAZZ BAND</h1>
-        <h2>Lista de Músicas</h2>
-        <ul class="music-list">
-            <li>
-                <h2>APOTEOSE RACIONAL</h2>
-                <div id="apoRacional" class="instruments">
-                    <div>
-                        <a href="partitura_clarinete1.pdf" download>1ºClarinete PDF</a>
-                        <a href="partitura_clarinete1.sib" download>1º Clarinete SIB</a>
-                    </div>
-                    <div>
-                        <a href="partitura_clarinete2.pdf" download>2ºClarinete PDF</a>
-                        <a href="partitura_clarinete2.sib" download>2º Clarinete SIB</a>
-                    </div>
-                    <div>
-                        <a href="partitura_clarinete3.pdf" download>3º Clarinete PDF</a>
-                        <a href="partitura_clarinete3.sib" download>3º Clarinete SIB</a>
-                    </div>
-                    <div>
-                        <a href="partitura_trompa.pdf" download>Trompa PDF</a>
-                        <a href="partitura_trompa.sib" download>Trompa SIB</a>
-                    </div>
-                    <!-- Adicione os links para outros instrumentos -->
-                </div>
-            </li>
-            <li>
-                <h2>DESENCANTO UNIVERSAL</h2>
-                <div id="desUniversal" class="instruments">
-                    <div>
-                        <a href="partitura_clarinete1.pdf" download>1ºClarinete PDF</a>
-                        <a href="partitura_clarinete1.sib" download>1º Clarinete SIB</a>
-                    </div>
-                    <div>
-                        <a href="partitura_clarinete2.pdf" download>2ºClarinete PDF</a>
-                        <a href="partitura_clarinete2.sib" download>2º Clarinete SIB</a>
-                    </div>
-                    <div>
-                        <a href="partitura_clarinete3.pdf" download>3º Clarinete PDF</a>
-                        <a href="partitura_clarinete3.sib" download>3º Clarinete SIB</a>
-                    </div>
-                    <div>
-                        <a href="partitura_trompa.pdf" download>Trompa PDF</a>
-                        <a href="partitura_trompa.sib" download>Trompa SIB</a>
-                    </div>
-                    <!-- Adicione os links para outros instrumentos -->
-                </div>
-            </li>
-            <li>
-                <h2>LUZ DO SABER</h2>
-                <div id="luzSaber" class="instruments">
-                    <div>
-                        <a href="partitura_clarinete1.pdf" download>1ºClarinete PDF</a>
-                        <a href="partitura_clarinete1.sib" download>1º Clarinete SIB</a>
-                    </div>
-                    <div>
-                        <a href="partitura_clarinete2.pdf" download>2ºClarinete PDF</a>
-                        <a href="partitura_clarinete2.sib" download>2º Clarinete SIB</a>
-                    </div>
-                    <div>
-                        <a href="partitura_clarinete3.pdf" download>3º Clarinete PDF</a>
-                        <a href="partitura_clarinete3.sib" download>3º Clarinete SIB</a>
-                    </div>
-                    <div>
-                        <a href="partitura_trompa.pdf" download>Trompa PDF</a>
-                        <a href="partitura_trompa.sib" download>Trompa SIB</a>
-                    </div>
-                    <!-- Adicione os links para outros instrumentos -->
-                </div>
-  <script src="scripts.js"></script>
+  <div class="container">
+    <h1>RACIONAL JAZZ BAND</h1>
+    <h2>Lista de Músicas</h2>
+    <ul class="music-list">
+      <li>
+        <h2>APOTEOSE RACIONAL</h2>
+        <div id="apoRacional" class="instruments">
+          <div>
+            <a href="partitura_clarinete1.pdf" download>1º Clarinete PDF</a>
+            <a href="partitura_clarinete1.sib" download>1º Clarinete SIB</a>
+          </div>
+          <div>
+            <a href="partitura_clarinete2.pdf" download>2º Clarinete PDF</a>
+            <a href="partitura_clarinete2.sib" download>2º Clarinete SIB</a>
+          </div>
+          <div>
+            <a href="partitura_clarinete3.pdf" download>3º Clarinete PDF</a>
+            <a href="partitura_clarinete3.sib" download>3º Clarinete SIB</a>
+          </div>
+          <div>
+            <a href="partitura_trompa.pdf" download>Trompa PDF</a>
+            <a href="partitura_trompa.sib" download>Trompa SIB</a>
+          </div>
+          <div class="toggle-button">
+            <button class="toggle-instruments">Mostrar</button>
+          </div>
+          </div>
+      </li>
+      <li>
+        <h2>DESENCANTO UNIVERSAL</h2>
+        <div id="desUniversal" class="instruments">
+          <div>
+            <a href="partitura_clarinete1.pdf" download>1º Clarinete PDF</a>
+            <a href="partitura_clarinete1.sib" download>1º Clarinete SIB</a>
+          </div>
+          <div>
+            <a href="partitura_clarinete2.pdf" download>2º Clarinete PDF</a>
+            <a href="partitura_clarinete2.sib" download>2º Clarinete SIB</a>
+          </div>
+          <div>
+            <a href="partitura_clarinete3.pdf" download>3º Clarinete PDF</a>
+            <a href="partitura_clarinete3.sib" download>3º Clarinete SIB</a>
+          </div>
+          <div>
+            <a href="partitura_trompa.pdf" download>Trompa PDF</a>
+            <a href="partitura_trompa.sib" download>Trompa SIB</a>
+          </div>
+          <div class="toggle-button">
+            <button class="toggle-instruments">Mostrar</button>
+          </div>
+          </div>
+      </li>
+      <li>
+        <h2>LUZ DO SABER</h2>
+        <div id="desUniversal" class="instruments"> <div>
+            <a href="partitura_clarinete1.pdf" download>1º Clarinete PDF</a>
+            <a href="partitura_clarinete1.sib" download>1º Clarinete SIB</a>
+          </div>
+          <div>
+            <a href="partitura_clarinete2.pdf" download>2º Clarinete PDF</a>
+            <a href="partitura_clarinete2.sib" download>2º Clarinete SIB</a>
+          </div>
+          <div>
+            <a href="partitura_clarinete3.pdf" download>3º Clarinete PDF</a>
+            <a href="partitura_clarinete3.sib" download>3º Clarinete SIB</a>
+          </div>
+          <div>
+            <a href="partitura_trompa.pdf" download>Trompa PDF</a>
+            <a href="partitura_trompa.sib" download>Trompa SIB</a>
+          </div>
+          <div class="toggle-button">
+            <button class="toggle-instruments">Mostrar</button>
+          </div>
+      </li>
+    </ul>
+</div>
+<script src="scripts.js"></script>
 </body>
 </html>
