inserindo todos os instrumentos

--- a/index.html
+++ b/index.html
@@ -1,88 +1,309 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RACIONAL JAZZ BAND</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <div class="container">
-    <h1>RACIONAL JAZZ BAND</h1>
-    <h2>Lista de Músicas</h2>
-    <ul class="music-list">
-      <li>
-        <h2>APOTEOSE RACIONAL</h2>
-        <div id="apoRacional" class="instruments">
-          <div>
-            <a href="partitura_clarinete1.pdf" download>1º Clarinete PDF</a>
-            <a href="partitura_clarinete1.sib" download>1º Clarinete SIB</a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>RACIONAL JAZZ BAND</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1>RACIONAL JAZZ BAND</h1>
+      <h2>Lista de Músicas</h2>
+      <ul class="music-list">
+        <li>
+          <h2>APOTEOSE RACIONAL</h2>
+          <div id="apoRacional" class="instruments">
+            <div>
+              <a href="partitura_clarinete1.pdf" download>Base PDF</a>
+              <a href="partitura_clarinete1.sib" download>Base SIB</a>
+            </div>
+            <div>
+              <a href="partitura_clarinete1.pdf" download>Bateria PDF</a>
+              <a href="partitura_clarinete1.sib" download>Bateria SIB</a>
+            </div>
+            <div>
+              <a href="partitura_clarinete1.pdf" download>Baixo E PDF</a>
+              <a href="partitura_clarinete1.sib" download>Baixo E SIB</a>
+            </div>
+            <div>
+              <a href="partitura_clarinete1.pdf" download>1º Clarinete PDF</a>
+              <a href="partitura_clarinete1.sib" download>1º Clarinete SIB</a>
+            </div>
+            <div>
+              <a href="partitura_clarinete2.pdf" download>2º Clarinete PDF</a>
+              <a href="partitura_clarinete2.sib" download>2º Clarinete SIB</a>
+            </div>
+            <div>
+              <a href="partitura_clarinete3.pdf" download>3º Clarinete PDF</a>
+              <a href="partitura_clarinete3.sib" download>3º Clarinete SIB</a>
+            </div>
+            <div>
+              <a href="partitura_clarinete3.pdf" download>Flauta PDF</a>
+              <a href="partitura_clarinete3.sib" download>Flauta SIB</a>
+            </div>
+            <div>
+              <a href="partitura_clarinete3.pdf" download>Lira PDF</a>
+              <a href="partitura_clarinete3.sib" download>Lira SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>Trompa PDF</a>
+              <a href="partitura_trompa.sib" download>Trompa SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>1º Sax Alto PDF</a>
+              <a href="partitura_trompa.sib" download>1º Sax Alto SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>3º Sax Alto PDF</a>
+              <a href="partitura_trompa.sib" download>3º Sax Alto SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>2º Sax Tenor PDF</a>
+              <a href="partitura_trompa.sib" download>2º Sax Tenor SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>4º Sax Tenor PDF</a>
+              <a href="partitura_trompa.sib" download>4º Sax Tenor SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>1º Trombone PDF</a>
+              <a href="partitura_trompa.sib" download>1º Trombone SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>2º Trombone PDF</a>
+              <a href="partitura_trompa.sib" download>2º Trombone SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>3º Trombone PDF</a>
+              <a href="partitura_trompa.sib" download>3º Trombone SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>4º Trombone PDF</a>
+              <a href="partitura_trompa.sib" download>4º Trombone SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>1º Trompete PDF</a>
+              <a href="partitura_trompa.sib" download>1º Trompete SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>2º Trompete PDF</a>
+              <a href="partitura_trompa.sib" download>2º Trompete SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>3º Trompete PDF</a>
+              <a href="partitura_trompa.sib" download>3º Trompete SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>4º Trompete PDF</a>
+              <a href="partitura_trompa.sib" download>4º Trompete SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>Tuba BB PDF</a>
+              <a href="partitura_trompa.sib" download>Tuba BB SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>Tuba EB PDF</a>
+              <a href="partitura_trompa.sib" download>Tuba EB SIB</a>
+            </div>
           </div>
-          <div>
-            <a href="partitura_clarinete2.pdf" download>2º Clarinete PDF</a>
-            <a href="partitura_clarinete2.sib" download>2º Clarinete SIB</a>
+        </li>
+        <li>
+          <h2>DESENCANTO UNIVERSAL</h2>
+          <div id="desUniversal" class="instruments">
+            <div>
+              <a href="partitura_clarinete1.pdf" download>Base PDF</a>
+              <a href="partitura_clarinete1.sib" download>Base SIB</a>
+            </div>
+            <div>
+              <a href="partitura_clarinete1.pdf" download>Bateria PDF</a>
+              <a href="partitura_clarinete1.sib" download>Bateria SIB</a>
+            </div>
+            <div>
+              <a href="partitura_clarinete1.pdf" download>Baixo E PDF</a>
+              <a href="partitura_clarinete1.sib" download>Baixo E SIB</a>
+            </div>
+            <div>
+              <a href="partitura_clarinete1.pdf" download>1º Clarinete PDF</a>
+              <a href="partitura_clarinete1.sib" download>1º Clarinete SIB</a>
+            </div>
+            <div>
+              <a href="partitura_clarinete2.pdf" download>2º Clarinete PDF</a>
+              <a href="partitura_clarinete2.sib" download>2º Clarinete SIB</a>
+            </div>
+            <div>
+              <a href="partitura_clarinete3.pdf" download>3º Clarinete PDF</a>
+              <a href="partitura_clarinete3.sib" download>3º Clarinete SIB</a>
+            </div>
+            <div>
+              <a href="partitura_clarinete3.pdf" download>Flauta PDF</a>
+              <a href="partitura_clarinete3.sib" download>Flauta SIB</a>
+            </div>
+            <div>
+              <a href="partitura_clarinete3.pdf" download>Lira PDF</a>
+              <a href="partitura_clarinete3.sib" download>Lira SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>Trompa PDF</a>
+              <a href="partitura_trompa.sib" download>Trompa SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>1º Sax Alto PDF</a>
+              <a href="partitura_trompa.sib" download>1º Sax Alto SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>3º Sax Alto PDF</a>
+              <a href="partitura_trompa.sib" download>3º Sax Alto SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>2º Sax Tenor PDF</a>
+              <a href="partitura_trompa.sib" download>2º Sax Tenor SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>4º Sax Tenor PDF</a>
+              <a href="partitura_trompa.sib" download>4º Sax Tenor SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>1º Trombone PDF</a>
+              <a href="partitura_trompa.sib" download>1º Trombone SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>2º Trombone PDF</a>
+              <a href="partitura_trompa.sib" download>2º Trombone SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>3º Trombone PDF</a>
+              <a href="partitura_trompa.sib" download>3º Trombone SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>4º Trombone PDF</a>
+              <a href="partitura_trompa.sib" download>4º Trombone SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>1º Trompete PDF</a>
+              <a href="partitura_trompa.sib" download>1º Trompete SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>2º Trompete PDF</a>
+              <a href="partitura_trompa.sib" download>2º Trompete SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>3º Trompete PDF</a>
+              <a href="partitura_trompa.sib" download>3º Trompete SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>4º Trompete PDF</a>
+              <a href="partitura_trompa.sib" download>4º Trompete SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>Tuba BB PDF</a>
+              <a href="partitura_trompa.sib" download>Tuba BB SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>Tuba EB PDF</a>
+              <a href="partitura_trompa.sib" download>Tuba EB SIB</a>
+            </div>
           </div>
-          <div>
-            <a href="partitura_clarinete3.pdf" download>3º Clarinete PDF</a>
-            <a href="partitura_clarinete3.sib" download>3º Clarinete SIB</a>
+        </li>
+        <li>
+          <h2>LUZ DO SABER</h2>
+          <div id="desUniversal" class="instruments">
+            <div>
+              <a href="partitura_clarinete1.pdf" download>Base PDF</a>
+              <a href="partitura_clarinete1.sib" download>Base SIB</a>
+            </div>
+            <div>
+              <a href="partitura_clarinete1.pdf" download>Bateria PDF</a>
+              <a href="partitura_clarinete1.sib" download>Bateria SIB</a>
+            </div>
+            <div>
+              <a href="partitura_clarinete1.pdf" download>Baixo E PDF</a>
+              <a href="partitura_clarinete1.sib" download>Baixo E SIB</a>
+            </div>
+            <div>
+              <a href="partitura_clarinete1.pdf" download>1º Clarinete PDF</a>
+              <a href="partitura_clarinete1.sib" download>1º Clarinete SIB</a>
+            </div>
+            <div>
+              <a href="partitura_clarinete2.pdf" download>2º Clarinete PDF</a>
+              <a href="partitura_clarinete2.sib" download>2º Clarinete SIB</a>
+            </div>
+            <div>
+              <a href="partitura_clarinete3.pdf" download>3º Clarinete PDF</a>
+              <a href="partitura_clarinete3.sib" download>3º Clarinete SIB</a>
+            </div>
+            <div>
+              <a href="partitura_clarinete3.pdf" download>Flauta PDF</a>
+              <a href="partitura_clarinete3.sib" download>Flauta SIB</a>
+            </div>
+            <div>
+              <a href="partitura_clarinete3.pdf" download>Lira PDF</a>
+              <a href="partitura_clarinete3.sib" download>Lira SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>Trompa PDF</a>
+              <a href="partitura_trompa.sib" download>Trompa SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>1º Sax Alto PDF</a>
+              <a href="partitura_trompa.sib" download>1º Sax Alto SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>3º Sax Alto PDF</a>
+              <a href="partitura_trompa.sib" download>3º Sax Alto SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>2º Sax Tenor PDF</a>
+              <a href="partitura_trompa.sib" download>2º Sax Tenor SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>4º Sax Tenor PDF</a>
+              <a href="partitura_trompa.sib" download>4º Sax Tenor SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>1º Trombone PDF</a>
+              <a href="partitura_trompa.sib" download>1º Trombone SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>2º Trombone PDF</a>
+              <a href="partitura_trompa.sib" download>2º Trombone SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>3º Trombone PDF</a>
+              <a href="partitura_trompa.sib" download>3º Trombone SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>4º Trombone PDF</a>
+              <a href="partitura_trompa.sib" download>4º Trombone SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>1º Trompete PDF</a>
+              <a href="partitura_trompa.sib" download>1º Trompete SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>2º Trompete PDF</a>
+              <a href="partitura_trompa.sib" download>2º Trompete SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>3º Trompete PDF</a>
+              <a href="partitura_trompa.sib" download>3º Trompete SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>4º Trompete PDF</a>
+              <a href="partitura_trompa.sib" download>4º Trompete SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>Tuba BB PDF</a>
+              <a href="partitura_trompa.sib" download>Tuba BB SIB</a>
+            </div>
+            <div>
+              <a href="partitura_trompa.pdf" download>Tuba EB PDF</a>
+              <a href="partitura_trompa.sib" download>Tuba EB SIB</a>
+            </div>
           </div>
-          <div>
-            <a href="partitura_trompa.pdf" download>Trompa PDF</a>
-            <a href="partitura_trompa.sib" download>Trompa SIB</a>
-          </div>
-          <div class="toggle-button">
-            <button class="toggle-instruments">Mostrar</button>
-          </div>
-          </div>
-      </li>
-      <li>
-        <h2>DESENCANTO UNIVERSAL</h2>
-        <div id="desUniversal" class="instruments">
-          <div>
-            <a href="partitura_clarinete1.pdf" download>1º Clarinete PDF</a>
-            <a href="partitura_clarinete1.sib" download>1º Clarinete SIB</a>
-          </div>
-          <div>
-            <a href="partitura_clarinete2.pdf" download>2º Clarinete PDF</a>
-            <a href="partitura_clarinete2.sib" download>2º Clarinete SIB</a>
-          </div>
-          <div>
-            <a href="partitura_clarinete3.pdf" download>3º Clarinete PDF</a>
-            <a href="partitura_clarinete3.sib" download>3º Clarinete SIB</a>
-          </div>
-          <div>
-            <a href="partitura_trompa.pdf" download>Trompa PDF</a>
-            <a href="partitura_trompa.sib" download>Trompa SIB</a>
-          </div>
-          <div class="toggle-button">
-            <button class="toggle-instruments">Mostrar</button>
-          </div>
-          </div>
-      </li>
-      <li>
-        <h2>LUZ DO SABER</h2>
-        <div id="desUniversal" class="instruments"> <div>
-            <a href="partitura_clarinete1.pdf" download>1º Clarinete PDF</a>
-            <a href="partitura_clarinete1.sib" download>1º Clarinete SIB</a>
-          </div>
-          <div>
-            <a href="partitura_clarinete2.pdf" download>2º Clarinete PDF</a>
-            <a href="partitura_clarinete2.sib" download>2º Clarinete SIB</a>
-          </div>
-          <div>
-            <a href="partitura_clarinete3.pdf" download>3º Clarinete PDF</a>
-            <a href="partitura_clarinete3.sib" download>3º Clarinete SIB</a>
-          </div>
-          <div>
-            <a href="partitura_trompa.pdf" download>Trompa PDF</a>
-            <a href="partitura_trompa.sib" download>Trompa SIB</a>
-          </div>
-          <div class="toggle-button">
-            <button class="toggle-instruments">Mostrar</button>
-          </div>
-      </li>
-    </ul>
-</div>
-<script src="scripts.js"></script>
-</body>
+        </li>
+      </ul>
+    </div>
+    <script src="scripts.js"></script>
+  </body>
 </html>
