ajuste minimizando e maximizando itens de cada música

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       <h2>Lista de Músicas</h2>
       <ul class="music-list">
         <li>
-          <h2>APOTEOSE RACIONAL</h2>
+          <button class="toggle-btn">↕</button>
+          <h3 data-toggle="collapse">APOTEOSE RACIONAL</h3>
+          <button class="toggle-btn">↕</button>
           <div id="apoRacional" class="instruments">
             <div>
               <a href="partitura_clarinete1.pdf" download>Base PDF</a>
@@ -109,7 +111,8 @@
           </div>
         </li>
         <li>
-          <h2>DESENCANTO UNIVERSAL</h2>
+          <h3>DESENCANTO UNIVERSAL</h3>
+          <button class="toggle-btn">↕</button>
           <div id="desUniversal" class="instruments">
             <div>
               <a href="partitura_clarinete1.pdf" download>Base PDF</a>
@@ -206,7 +209,8 @@
           </div>
         </li>
         <li>
-          <h2>LUZ DO SABER</h2>
+          <h3>LUZ DO SABER</h3>
+          <button class="toggle-btn">↕</button>
           <div id="desUniversal" class="instruments">
             <div>
               <a href="partitura_clarinete1.pdf" download>Base PDF</a>
