ajustando músicas e cor do arquivo PDF

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <ul class="music-list">
         <li>
           <button class="toggle-btn">↕</button>
-          <h3 data-toggle="collapse">APOTEOSE RACIONAL</h3>
+          <h3 data-toggle="collapse">ODE A ALEGRIA</h3>
           <button class="toggle-btn">↕</button>
           <div id="apoRacional" class="instruments">
             <div>
@@ -111,7 +111,7 @@
           </div>
         </li>
         <li>
-          <h3>DESENCANTO UNIVERSAL</h3>
+          <h3>GAME OF TRONES</h3>
           <button class="toggle-btn">↕</button>
           <div id="desUniversal" class="instruments">
             <div>
@@ -209,7 +209,7 @@
           </div>
         </li>
         <li>
-          <h3>LUZ DO SABER</h3>
+          <h3>TROMPETE DE ESPANHA</h3>
           <button class="toggle-btn">↕</button>
           <div id="desUniversal" class="instruments">
             <div>
