inserindo partitura game of trones

--- a/index.html
+++ b/index.html
@@ -138,19 +138,35 @@
               <a href="partitura_clarinete1.sib" download>Baixo E SIB</a>
             </div>
             <div>
-              <a href="partitura_clarinete1.pdf" download>1º Clarinete PDF</a>
+              <a
+                href="https://drive.google.com/file/d/1h2mNcTl2UGsEL7kAa1WwhgY3Hyp9To96/view?usp=sharing"
+                download
+                >1º Clarinete PDF</a
+              >
               <a href="partitura_clarinete1.sib" download>1º Clarinete SIB</a>
             </div>
             <div>
-              <a href="partitura_clarinete2.pdf" download>2º Clarinete PDF</a>
+              <a
+                href="https://drive.google.com/file/d/1uq10Y8mEKojZpY-cmuuulPtSVZ2-nRjp/view?usp=sharing"
+                download
+                >2º Clarinete PDF</a
+              >
               <a href="partitura_clarinete2.sib" download>2º Clarinete SIB</a>
             </div>
             <div>
-              <a href="partitura_clarinete3.pdf" download>3º Clarinete PDF</a>
+              <a
+                href="https://drive.google.com/file/d/1P_3GLf4_XaZXcfsxVE9xNtrTSugUKklH/view?usp=sharing"
+                download
+                >3º Clarinete PDF</a
+              >
               <a href="partitura_clarinete3.sib" download>3º Clarinete SIB</a>
             </div>
             <div>
-              <a href="partitura_clarinete3.pdf" download>Flauta PDF</a>
+              <a
+                href="https://drive.google.com/file/d/1_K49PYzKMQTU_Ep-2qQNXccmqC2QlvzN/view?usp=sharing"
+                download
+                >Flauta PDF</a
+              >
               <a href="partitura_clarinete3.sib" download>Flauta SIB</a>
             </div>
             <div>
@@ -170,12 +186,20 @@
               <a href="partitura_trompa.sib" download>3º Sax Alto SIB</a>
             </div>
             <div>
-              <a href="partitura_trompa.pdf" download>2º Sax Tenor PDF</a>
+              <a
+                href="https://drive.google.com/file/d/1NL--e_qj8_22RPS7rS9IiJCFC4ujhN3v/view?usp=sharing"
+                download
+                >1º Sax Tenor PDF</a
+              >
               <a href="partitura_trompa.sib" download>2º Sax Tenor SIB</a>
             </div>
             <div>
-              <a href="partitura_trompa.pdf" download>4º Sax Tenor PDF</a>
-              <a href="partitura_trompa.sib" download>4º Sax Tenor SIB</a>
+              <a
+                href="https://drive.google.com/file/d/1Yyf0Aqb2K5vkcyWLzwzFtxrL5s0m5h2M/view?usp=sharing"
+                download
+                >4º Sax Tenor PDF</a
+              >
+              <a href="partitura_trompa.sib" download>2º Sax Tenor SIB</a>
             </div>
             <div>
               <a href="partitura_trompa.pdf" download>1º Trombone PDF</a>
